--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ repo: &repo
 
 steps:
   - name: build-base
-    image: docker:dind
+    image: maniator/dind-buildx
     volumes:
       - name: dockersock
         path: /var/run
