--- a/.drone.yml
+++ b/.drone.yml
@@ -55,6 +55,7 @@ steps:
       - *sleep
       - *login
     #   - *setup
+      - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes && docker buildx create --name builder --driver docker-container --use && docker buildx inspect --bootstrap
       - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t $REPO:base --push .
 
 services:
