--- a/2021/Dockerfile
+++ b/2021/Dockerfile
@@ -4,9 +4,9 @@ LABEL maintainer="Max Kratz <account@maxkratz.com>"
 
 # Install texlive
 COPY 2021/texlive.profile .
-RUN wget http://ctan.mirror.norbert-ruehl.de/systems/texlive/tlnet/install-tl-unx.tar.gz
+RUN wget http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2021/install-tl-unx.tar.gz
 RUN tar xvzf install-tl-unx.tar.gz
-RUN ./install-tl-*/install-tl -profile texlive.profile
+RUN ./install-tl-*/install-tl -profile texlive.profile -repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2021/tlnet-final/ --no-verify-downloads
 
 # Add texlive to path
 ENV PATH="/usr/local/texlive/2021/bin/x86_64-linux:$PATH"
