Build lua font cache in all versions

--- a/2018/Dockerfile
+++ b/2018/Dockerfile
@@ -15,6 +15,7 @@ ENV PATH="/usr/local/texlive/2018/bin/armhf-linux:$PATH"
 
 # Update tlmgr + tex-packages
 RUN tlmgr update --self --all --reinstall-forcibly-removed
+RUN luaotfload-tool -v -vvv -u
 
 WORKDIR /data
 CMD ["bash"]
