--- a/2020/Dockerfile
+++ b/2020/Dockerfile
@@ -3,7 +3,7 @@ FROM maxkratz/texlive:base
 LABEL maintainer="Max Kratz <account@maxkratz.com>"
 
 # Install texlive
-COPY 2020/texlive.profile .
+COPY texlive.profile .
 RUN wget http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2020/install-tl-unx.tar.gz
 RUN tar xvzf install-tl-unx.tar.gz
 RUN ./install-tl-*/install-tl -profile texlive.profile -repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2020/tlnet-final/ --no-verify-downloads
