--- a/2022/Dockerfile
+++ b/2022/Dockerfile
@@ -3,7 +3,7 @@ FROM maxkratz/texlive:base
 LABEL maintainer="Max Kratz <account@maxkratz.com>"
 
 # Install texlive
-COPY 2022/texlive.profile .
+COPY texlive.profile .
 RUN wget http://ctan.mirror.norbert-ruehl.de/systems/texlive/tlnet/install-tl-unx.tar.gz
 RUN tar xvzf install-tl-unx.tar.gz
 RUN ./install-tl-*/install-tl -profile texlive.profile
