--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -35,7 +35,7 @@ jobs:
     needs: [build-and-push-base]
     strategy:
       matrix:
-        year: [2016, 2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -55,3 +55,30 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+
+  # 2016 can not be built with arm/v7 support
+  build-and-push-2016-mage:
+    runs-on: [ubuntu-22.04]
+    needs: [build-and-push-base]
+    strategy:
+      matrix:
+        year: [2016]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./${{ matrix.year }}
+          push: true
+          tags: maxkratz/texlive:${{ matrix.year }}
+          platforms: linux/amd64,linux/arm64
