--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -30,7 +30,7 @@ jobs:
     needs: [build-base]
     strategy:
       matrix:
-        year: [2016, 2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -45,3 +45,25 @@ jobs:
           push: false
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+
+  # 2016 can not be built with arm/v7 support
+  build-2016-image:
+    runs-on: [ubuntu-22.04]
+    needs: [build-base]
+    strategy:
+      matrix:
+        year: [2016]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./${{ matrix.year }}
+          push: false
+          tags: maxkratz/texlive:${{ matrix.year }}
+          platforms: linux/amd64,linux/arm64
