--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -56,7 +56,7 @@ jobs:
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
-  # 2016 can not be built with arm/v7 support
+  # 2016 can not be built with arm64 support
   build-and-push-2016-mage:
     runs-on: [ubuntu-22.04]
     needs: [build-and-push-base]
@@ -81,4 +81,4 @@ jobs:
           context: ./${{ matrix.year }}
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm/v7
