--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -46,7 +46,7 @@ jobs:
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
-  # 2016 can not be built with arm/v7 support
+  # 2016 can not be built with arm64 support
   build-2016-image:
     runs-on: [ubuntu-22.04]
     needs: [build-base]
@@ -66,4 +66,4 @@ jobs:
           context: ./${{ matrix.year }}
           push: false
           tags: maxkratz/texlive:${{ matrix.year }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm/v7
