--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -30,12 +30,12 @@ jobs:
           tags: maxkratz/texlive:base
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
-  build-and-push-mage:
+  build-and-push-image:
     runs-on: [ubuntu-22.04]
     needs: [build-and-push-base]
     strategy:
       matrix:
-        year: [2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle, 2023]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle, 2023, 2023-gradle]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
