--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -30,7 +30,7 @@ jobs:
     needs: [build-base]
     strategy:
       matrix:
-        year: [2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle, 2023, 2023-gradle]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2022-gradle, 2023]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
