--- a/2022/Dockerfile
+++ b/2022/Dockerfile
@@ -6,7 +6,7 @@ LABEL maintainer="Max Kratz <account@maxkratz.com>"
 COPY texlive.profile .
 RUN wget http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2022/install-tl-unx.tar.gz
 RUN tar xvzf install-tl-unx.tar.gz
-RUN ./install-tl-*/install-tl -profile texlive.profile
+RUN ./install-tl-*/install-tl -profile texlive.profile -repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2022/tlnet-final/ --no-verify-downloads
 
 # Add texlive to path
 ENV PATH="/usr/local/texlive/2022/bin/x86_64-linux:$PATH"
