--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -7,6 +7,9 @@ on:
       - 'feature/**'
       - 'hotfix/**'
 
+env:
+  LATEST_TAG: 2023
+
 jobs:
   build-base:
     runs-on: [ubuntu-22.04]
@@ -38,12 +41,23 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build image
+      - if: matrix.year != '$LATEST_TAG'
+        name: Build image
         uses: docker/build-push-action@v3
         with:
           context: ./${{ matrix.year }}
           push: false
           tags: maxkratz/texlive:${{ matrix.year }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+      - if: matrix.year == '$LATEST_TAG'
+        name: Build image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./${{ matrix.year }}
+          push: false
+          tags: |
+            maxkratz/texlive:${{ matrix.year }}
+            maxkratz/texlive:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
   # 2016 can not be built with arm64 support
