--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -56,33 +56,6 @@ jobs:
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
-  build-and-push-image-variants:
-    # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
-    runs-on: [self-hosted]
-    needs: [build-and-push-image]
-    strategy:
-      matrix:
-        year: [2022-gradle, 2023-gradle, 2023-python]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build image
-        uses: docker/build-push-action@v3
-        with:
-          context: ./${{ matrix.year }}
-          push: true
-          tags: maxkratz/texlive:${{ matrix.year }}
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-
   # latest is an extra build step because of buggy GitHub Actions if conditions
   build-and-push-latest-image:
     runs-on: [ubuntu-22.04]
@@ -111,7 +84,34 @@ jobs:
             maxkratz/texlive:${{ matrix.year }}
             maxkratz/texlive:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-  
+
+  build-and-push-image-variants:
+    # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
+    runs-on: [self-hosted]
+    needs: [build-and-push-latest-image]
+    strategy:
+      matrix:
+        year: [2022-gradle, 2023-gradle, 2023-python]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./${{ matrix.year }}
+          push: true
+          tags: maxkratz/texlive:${{ matrix.year }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+
   # 2016 can not be built with arm64 support
   build-and-push-2016-image:
     runs-on: [ubuntu-22.04]
