Adds texlive version 2024

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -35,7 +35,7 @@ jobs:
     needs: [build-and-push-base]
     strategy:
       matrix:
-        year: [2017, 2018, 2019, 2020, 2021, 2022]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2023]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -62,7 +62,7 @@ jobs:
     needs: [build-and-push-base]
     strategy:
       matrix:
-        year: [2023]
+        year: [2024]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -91,7 +91,7 @@ jobs:
     needs: [build-and-push-image, build-and-push-latest-image]
     strategy:
       matrix:
-        year: [2022-gradle, 2023-gradle, 2023-python]
+        year: [2022-gradle, 2023-gradle, 2023-python, 2024-gradle, 2024-python]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
