--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -30,7 +30,7 @@ jobs:
     needs: [build-base]
     strategy:
       matrix:
-        year: [2017, 2018, 2019, 2020, 2021, 2022]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2023]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -51,7 +51,7 @@ jobs:
     needs: [build-image]
     strategy:
       matrix:
-        year: [2022-gradle, 2023-gradle, 2023-python]
+        year: [2022-gradle, 2023-gradle, 2023-python, 2024-gradle, 2024-python]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -73,7 +73,7 @@ jobs:
     needs: [build-base]
     strategy:
       matrix:
-        year: [2023]
+        year: [2024]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
