--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -47,7 +47,8 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
   build-image-variants:
-    runs-on: [ubuntu-22.04]
+    # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
+    runs-on: [self-hosted]
     needs: [build-image]
     strategy:
       matrix:
