--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -56,6 +56,7 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+        timeout-minutes: 720
 
   build-and-push-image-2023:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
@@ -84,6 +85,7 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+        timeout-minutes: 720
 
   # latest is an extra build step because of buggy GitHub Actions if conditions
   build-and-push-latest-image:
@@ -115,6 +117,7 @@ jobs:
             maxkratz/texlive:${{ matrix.year }}
             maxkratz/texlive:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+        timeout-minutes: 720
 
   build-and-push-image-variants:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
@@ -170,3 +173,4 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm/v7
+        timeout-minutes: 720
